I have removed the horizontal scrolling issue and made the animation faster

--- a/css/transformers.css
+++ b/css/transformers.css
@@ -81,7 +81,7 @@
 
     .thebans .carousel-caption h3 {
         display: block;
-        font-size: 20px;
+        font-size: 17px;
         float: right;
         margin-top: 28px;
         margin-left: 20px;
@@ -89,6 +89,7 @@
 
     .others {
         position: absolute;
+        font-size: 20px !important;
         bottom: 0%;
         left: 2px;
         width: 100px;
@@ -218,7 +219,8 @@
 .slideit {
     width: fit-content;
     position: absolute;
-    right: -1.3%;
+    right: 0.1%;
+    padding-right: 0 !important;
     bottom: 10%;
 }
 
